--- a/.github/workflows/hugo_build.yml
+++ b/.github/workflows/hugo_build.yml
@@ -25,6 +25,6 @@ jobs:
       with:
         apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-        projectName: 'your-project-name'  # 替换为您在 Cloudflare Pages 中的项目名称
+        projectName: 'onestepmumu-site'  # 替换为您在 Cloudflare Pages 中的项目名称
         branch: main  # 确保与 Cloudflare 中配置的部署分支一致
 
