--- a/.github/workflows/hugo_build.yml
+++ b/.github/workflows/hugo_build.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
       with:
-        hugo-version: 'v0.126.1'  # 替换为您需要的 Hugo 版本
+        hugo-version: '0.126.1'  # 替换为您需要的 Hugo 版本
 
     - name: Build Hugo Site
       run: hugo
